--- a/modelViewer.html
+++ b/modelViewer.html
@@ -18,8 +18,9 @@
 </script>
     <title>Document</title>
 </head>
+
 <body>
-    <div>
+    
         <model-viewer alt="A 3D model of an astronaut." 
             src="test_coca_02.glb"
             ios-src="test_sana_2.usdz"
@@ -37,8 +38,36 @@
                 👋 Activate AR
             </button>
         </model-viewer>
-        
+
+
+        <a class="android icon-button" 
+        href="intent://arvr.google.com/scene-viewer/1.0?file=https://www.lamborghini.com/sites/it-en/files/DAM/lamborghini/facelift_2019/model_detail/augmented-reality/huracan/huracan_evo_rwd_spyder/Huracan-EVO-RWD-Spyder-opt-22.glb?mode=ar_only&amp;title=HURACAN EVO RWD SPYDER&amp;resizable=true#Intent;scheme=https;package=com.google.android.googlequicksearchbox;action=android.intent.action.VIEW;S.browser_fallback_url=https://www.lamborghini.com;end;" target="_blank">
+        Lambo
+        </a>
+        <p></p>
+        <a class="android-ar-button"
+         href="intent://arvr.google.com/scene-viewer/1.0?file=https://raw.github.com/josuejitzu/Santa_AR_testing/master/test_coca_02.glb&title=Tiger#Intent;scheme=https;package=com.google.android.googlequicksearchbox;action=android.intent.action.VIEW;S.browser_fallback_url=https://developers.google.com/ar;end;'"
+        >
+        Mi modelo
+        </a>
+        <p></p>
+        <a class="ios-ar-button"
+        href="test_sana_2.usdz" type="model/vndusdz+zip"
+        rel="ar"
+        >
+
+        AR iOS
+        </a>
+        <p></p>
+        <!-- <a id="ar-dummy-link" 
+        href="https://www.lamborghini.com/sites/it-en/files/DAM/lamborghini/facelift_2019/model_detail/augmented-reality/huracan/huracan_evo_rwd_spyder/Huracan-EVO-RWD-Spyder-opt-22.usdz" 
+        type="model/vnd.usdz+zip" rel="ar">Ejemplo lamborghini</a>
+        <p></p> -->
+    <div>
+        <!-- <a href="intent://arvr.google.com/scene-viewer/1.0?file=https://raw.githubusercontent.com/KhronosGroup/glTF-Sample-Models/master/2.0/Avocado/glTF/Avocado.gltf&mode=ar_only#Intent;scheme=https;package=com.google.ar.core;action=android.intent.action.VIEW;S.browser_fallback_url=https://developers.google.com/ar;end;">Avocado</a>; -->
+        <a href="intent://arvr.google.com/scene-viewer/1.0?file=test_coca_02.glbf&mode=ar_only#Intent;scheme=https;package=com.google.ar.core;action=android.intent.action.VIEW;S.browser_fallback_url=https://developers.google.com/ar;end;">Avocado</a>;
     </div>
+    <model-viewer ar alt="A 3D model of an astronaut." src="test_coca_02.glb"></model-viewer>
     <!-- Loads <model-viewer> for modern browsers: -->
      <script type="module"
          src="https://unpkg.com/@google/model-viewer/dist/model-viewer.js">
@@ -48,6 +77,34 @@
      <!-- Loads <model-viewer> for old browsers like IE11: -->
      <script nomodule
          src="https://unpkg.com/@google/model-viewer/dist/model-viewer-legacy.js">
-        </script>
+     </script>
+
+
+    <script>
+        // Check whether this is an Android device.
+    const isAndroid = /android/i.test(navigator.userAgent);
+    // This web fallback url will launch if the correct version of the Google app is
+    // not available.
+    const fallbackUrl =
+
+    'https://arvr.google.com/scene-viewer?file=https%3A%2F%2Fstorage.googleapis.com%2Far-answers-in-search-models%2Fstatic%2FTiger%2Fmodel.glb&link=https%3A%2F%2Fgoogle.com&title=Tiger';
+
+    // This is the intent launching URL that triggers Scene Viewer on Android
+    // and falls back to fallbackUrl if the Google app is not available.
+    const sceneViewerUrl =
+
+    'intent://arvr.google.com/scene-viewer/1.0?file=https://www.josuejitzu.github.io/Santa_AR_testing/test_coca_02.glb&title=Tiger#Intent;scheme=https;package=com.google.android.googlequicksearchbox;action=android.intent.action.VIEW;S.browser_fallback_url=https://developers.google.com/ar;end;';
+
+    // Create a link.
+    var a = document.createElement('a');
+    a.appendChild(document.createTextNode('Tiger'));
+    // Set the links href to the intent Url on Android and the fallback Url
+    // everywhere else.
+    a.href = isAndroid ? sceneViewerUrl : fallbackUrl;
+    // Add the link to the page.
+    document.body.appendChild(a);
+
+    </script>
+
 </body>
 </html>
