--- a/xr_plane.html
+++ b/xr_plane.html
@@ -80,7 +80,7 @@
   </head>  
   <body>
 
-    <a-scene>
+    <a-scene background="transparent">
       <a-assets timeout="30000">
         <!-- Model source: https://sketchfab.com/3d-models/spinosaurus-2135501583704537907645bf723685e7
              Model author: https://sketchfab.com/VapTor
