--- a/modelViewer.html
+++ b/modelViewer.html
@@ -42,8 +42,8 @@
               AR Android
           </a>
      
-     
-          <a target="_blank" class="btn btn-lg btn-secondary" href="./modelos/test_sana_2.usdz">
+         <!-- ./modelos/test_sana_2.usdz -->
+          <a target="_blank" class="btn btn-lg btn-secondary" href="./modelos/santa_claus_02/Santa_Claus.usdz">
               AR iOS
           </a>
           <p></p>
